samples/_failures_safe/1761211247_829b1b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7c66fbe0.c: In function ‘matrix_transpose’:
./samples/SAFE/__tmp_7c66fbe0.c:147:9: error: expected declaration or statement at end of input
  147 |         }
      |         ^
./samples/SAFE/__tmp_7c66fbe0.c:147:9: error: expected declaration or statement at end of input
